tests/reference/pass_insert_deallocate-finalize_01-3efebdd.stderr
semantic error: EXIT statement outside of loop
  --> tests/finalize_01.f90:41:9
   |
41 |         exit bl ! This will have `impliciteDeallocate` inserted before it.
   |         ^^^^^^^ 
